# ai-orchestration

./: .env.nocodb.example  .gitignore  E2E_TEST_REPORT.md  LICENSE  MULTI_PROJECT_IMPLEMENTATION.md  PARALLEL_EXECUTION_IMPLEMENTATION.md  README.md  package-lock.json  pyproject.toml  taskplane.toml.example
.codex/commands/: tp-contract.md  tp-eval.md  tp-report.md  tp-supervise.md  tp-watch.md
.github/workflows/: console-tests.yml
docs/: README.md  agent-harness-target-architecture.md  ai-task-testing-strategy.md  architecture-data-consistency-analysis.md  architecture-overview.md  eval-boundary.md  eval-smoke-suite-contract.md  executor-routing-profiles.md  github-issue-format.md  harness-alignment-roadmap.md  mvp-design.md  natural-language-intake-followup-plan.md  nocodb-integration.md  product-roadmap.md  program-governance-model.md  substrate-architecture.md  task-orchestrator-correctness-and-verification-design.md  tech-tree.html  ui-design-brief.md
docs/adr/: 0001-engineering-boundaries.md
docs/archive/: multi-project-implementation.md
docs/templates/: epic-template.md  story-template.md  task-template.md
docs/workflows/: three-command-workflow.md
examples/: run_long_session.py
examples/taskplane-demo/: issue-112.md
frontend/: console.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
frontend/src/: App.tsx  api.ts  index.css  main.tsx  taskplane_demo_intent-684b7904-453b-4c23-968f-5ad822ba379b-t2-1.md  types.ts
ops/: docker-compose.nocodb.yml
scripts/: codex_executor.sh  test-console.sh  tp-contract  tp-eval  tp-report  tp-supervise  tp-watch
skills/taskplane/: SKILL.md
sql/: 001_parallel_execution_extensions.sql  002_global_coordination.sql  003_ui_enhancements.sql  004_artifact_store.sql  005_dlq_and_observability.sql  006_executor_routing_profiles.sql  007_natural_language_intake_review.sql  008_repo_registry.sql  009_orchestrator_session.sql  MIGRATION_GUIDE.md  control_plane_schema.sql  data_integrity_fixes.sql  data_integrity_triggers.sql  nocodb_views.sql
src/stardrifter_orchestration_mvp/: __init__.py  _console_api_repo_jobs.py  _console_api_stories.py  _console_api_tasks.py  _worker_execution_context.py  _worker_execution_runtime.py  _worker_failure_policy.py  _worker_queue_preparation.py  adapters.py  agent_hub.py  ai_decision_agent.py  attempt_report.py  attempt_report_cli.py  auto_split_trigger.py  cli.py  clock.py  console_actions.py  console_api.py  console_read_api.py  context_store.py  contextweaver_indexing.py  dashboard_cli.py  e2e_test.py  epic_decomposition.py  epic_decomposition_cli.py  epic_resume_cli.py  epic_runner.py  epic_scheduler.py  execution_protocol.py  executor_adapter.py  factory.py  fallback_templates.py  git_committer.py  github_importer.py  github_writeback.py  global_coordinator.py  global_coordinator_cli.py  governance_decision_engine.py  governance_priority_api.py  governance_priority_cli.py  (+46 more)
src/taskplane/: __init__.py  _console_api_epics.py  _console_api_internal.py  _console_api_repo_jobs.py  _console_api_tasks.py  _worker_execution_context.py  _worker_execution_runtime.py  _worker_failure_policy.py  _worker_queue_preparation.py  actions_api_routes.py  adapters.py  agent_hub.py  agent_pool_manager.py  artifact_store.py  attempt_report.py  attempt_report_cli.py  browser_executor.py  claude_code_task_executor.py  cli.py  codex_task_executor.py  console_actions.py  console_api.py  console_read_api.py  context_store.py  contextatlas_indexing.py  contextweaver_indexing.py  dashboard_cli.py  dead_letter_queue.py  demo_cli.py  dev_cli.py  (+90 more)
tests/: conftest.py  session_fixtures.py  session_manager_contract.py  smoke_console_ui.py  taskplane_demo_intent-684b7904-453b-4c23-968f-5ad822ba379b-t3-1.md  test_adapters.py  test_agent_hub.py  test_artifact_store.py  test_attempt_report.py  test_attempt_report_cli.py  test_boundary.py  test_browser_executor.py  test_claude_code_executor.py  test_cli.py  test_cli_commands.py  test_clock.py  test_codex_task_executor.py  test_console_actions.py  test_console_helpers.mjs  test_console_queries_import_contract.py  test_console_read_api.py  test_context_store.py  test_contextatlas_indexing.py  test_contextweaver_indexing.py  test_dashboard_cli.py  test_dead_letter_queue.py  test_demo_cli.py  test_demo_task_executor.py  test_dev_cli.py  test_doctor_cli.py  test_e2e_session_lifecycle.py  test_epic_decomposition.py  test_epic_resume_cli.py  test_epic_runner.py  test_epic_scheduler.py  test_eval_ci_thresholds.py  test_eval_contract_cli.py  test_eval_exports.py  test_eval_smoke_suites.py  test_event_log.py  (+71 more)
(+94 files in other folders)
