[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "taskplane"
version = "0.1.0"
description = "PostgreSQL-backed orchestration control plane MVP for Starsector migration work."
requires-python = ">=3.11"
dependencies = [
    "psycopg[binary]>=3.2,<4",
    "fastapi>=0.110,<1",
    "uvicorn[standard]>=0.29,<1",
]

[project.scripts]
taskplane-worker = "taskplane.cli:entrypoint"
taskplane-operator = "taskplane.operator_cli:entrypoint"
taskplane-import = "taskplane.import_cli:entrypoint"
taskplane-project = "taskplane.projection_sync_cli:entrypoint"
taskplane-governance = "taskplane.governance_sync_cli:entrypoint"
taskplane-governance-state = "taskplane.governance_state_cli:entrypoint"
taskplane-governance-report = "taskplane.governance_report_cli:entrypoint"
taskplane-governance-priority = "taskplane.governance_priority_cli:entrypoint"
taskplane-decompose = "taskplane.story_decomposition_cli:entrypoint"
taskplane-story = "taskplane.story_runner_cli:entrypoint"
taskplane-supervisor = "taskplane.supervisor_cli:entrypoint"
taskplane-triage = "taskplane.triage_report_cli:entrypoint"
taskplane-attempt-report = "taskplane.attempt_report_cli:entrypoint"
taskplane-eval-contract = "taskplane.eval_contract_cli:entrypoint"
taskplane-reconciliation-report = "taskplane.reconciliation_report_cli:entrypoint"
taskplane-loop = "taskplane.orchestration_loop:entrypoint"
taskplane-hierarchy = "taskplane.hierarchy_report_cli:entrypoint"
taskplane-ui = "taskplane.hierarchy_api_cli:entrypoint"
taskplane-wrap = "taskplane.wrap_cli:entrypoint"
taskplane-intake = "taskplane.intake_cli:entrypoint"
taskplane-workflow = "taskplane.workflow_cli:entrypoint"
taskplane-doctor = "taskplane.doctor_cli:entrypoint"
taskplane-dev = "taskplane.dev_cli:entrypoint"
taskplane-demo = "taskplane.demo_cli:entrypoint"
taskplane-live-acceptance = "taskplane.live_acceptance_cli:entrypoint"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: end-to-end or database-backed integration coverage",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
